--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
       left: 0;
       z-index: 10;
       opacity: .2;
-      height: 200px;
-      width: 200px;
+      height: 500px;
+      width: 500px;
     }
 
     canvas:hover {
@@ -96,7 +96,7 @@
       function Shape(x, y, worldBoundsX, worldBoundsY) {
         this.setWorldBounds(worldBoundsX, worldBoundsY);
 
-        this.setWorldSize(46, 65);
+        this.setWorldSize(47, 66);
         this.setPositionByWorld(x, y);
         this.createElement();
         this.createPhysicsBody();
@@ -106,6 +106,10 @@
         this.element.style.width = "" + this.getWorldWidth() + "px";
         this.element.style.height = "" + this.getWorldHeight() + "px";
         this.element.style.position = "absolute";
+        this.element.style.left = "0px";
+        this.element.style.top = "0px";
+        this.element.style["transform-origin"] = "center";
+        this.element.style["background-size"] = "cover";
         this.element.style.backgroundImage =
           "url('https://raw.githubusercontent.com/27-Nerds/27/main/assets/images/icons/rabbit.svg')";
         document.body.appendChild(this.element);
@@ -129,7 +133,7 @@
 
       Shape.prototype.setWorldSize = function (width, height) {
         this.width = width * (1000 / this.worldBoundsX);
-        this.height = height * 0.97 * (1000 / this.worldBoundsY);
+        this.height = height * (1000 / this.worldBoundsY);
       };
 
       Shape.prototype.setWorldBounds = function (x, y) {
@@ -138,23 +142,28 @@
       };
 
       Shape.prototype.getWorldX = function () {
-        return Math.round(this.body.position.x / (1000 / this.worldBoundsX));
+        return (this.body.position.x / (1000 / this.worldBoundsX));
+        // return Math.round(this.body.bounds.min.x / (1000 / this.worldBoundsX));
       }
 
       Shape.prototype.getWorldY = function () {
-        return Math.round(this.body.position.y / (1000 / this.worldBoundsY));
+        return (this.body.position.y / (1000 / this.worldBoundsY));
+        // return Math.round(this.body.bounds.min.y / (1000 / this.worldBoundsY));
       }
 
       Shape.prototype.getWorldWidth = function () {
-        return Math.round(this.width / (1000 / this.worldBoundsX));
+        return (this.width / (1000 / this.worldBoundsX));
       }
 
       Shape.prototype.getWorldHeight = function () {
-        return Math.round(this.height / (1000 / this.worldBoundsY) * 1.03);
+        return (this.height / (1000 / this.worldBoundsY));
       }
 
 
       Shape.prototype.animate = function () {
+        // this.element.style.left =  "" + this.getWorldX() + "px";
+        // this.element.style.top =  "" + this.getWorldY() + "px";
+
         this.element.style.transform = "translate( " +
           this.getWorldX() +
           "px, " +
