--- a/index.html
+++ b/index.html
@@ -8,14 +8,12 @@
   </script>
 
   <style>
-    html {
-      height: 1000px;
-      width: 1000px;
+   html {
+      height: 100%;
     }
 
     body {
-      height: 1000px;
-      width: 1000px;
+      min-height: 100%;
     }
 
     body {
@@ -35,8 +33,8 @@
       left: 0;
       z-index: 10;
       opacity: .2;
-      height: 400px;
-      width: 400px;
+      height: 200px;
+      width: 200px;
     }
 
     canvas:hover {
@@ -73,8 +71,8 @@
         element: document.getElementById("debug"),
         engine: engine,
         options: {
-          width: 1000,
-          height: 1000,
+          width: 100,
+          height: 100,
           background: '#fafafa',
           wireframeBackground: '#222',
           hasBounds: false,
@@ -98,15 +96,15 @@
       function Shape(x, y, worldBoundsX, worldBoundsY) {
         this.setWorldBounds(worldBoundsX, worldBoundsY);
 
-        this.setWorldSize(47, 66);
-        this.setPositionByWorld(x, y);
+        this.setRealSize(47, 66);
+        this.setRealPosition(x, y);
         this.createElement();
         this.createPhysicsBody();
       }
       Shape.prototype.createElement = function () {
         this.element = document.createElement("div");
-        this.element.style.width = "" + this.getWorldWidth() + "px";
-        this.element.style.height = "" + this.getWorldHeight() + "px";
+        this.element.style.width = "" + this.getRealWidth() + "px";
+        this.element.style.height = "" + this.getRealHeight() + "px";
         this.element.style.position = "absolute";
         this.element.style.left = "0px";
         this.element.style.top = "0px";
@@ -123,9 +121,9 @@
         this.y = y;
       };
 
-      Shape.prototype.setPositionByWorld = function (x, y) {
-        this.x = x * (1000 / this.worldBoundsX);
-        this.y = y * (1000 / this.worldBoundsY);
+      Shape.prototype.setRealPosition = function (x, y) {
+        this.x = x * (100 / this.worldBoundsX);
+        this.y = y * (100 / this.worldBoundsY);
       }
 
       Shape.prototype.setSize = function (width, height) {
@@ -133,43 +131,44 @@
         this.height = height;
       };
 
-      Shape.prototype.setWorldSize = function (width, height) {
-        this.width = width * (1000 / this.worldBoundsX);
-        this.height = height * (1000 / this.worldBoundsY);
+      Shape.prototype.setRealSize = function (width, height) {
+        this.width = width * (100 / this.worldBoundsX) * this.aspectRatio;
+        this.height = height * (100 / this.worldBoundsY);
       };
 
       Shape.prototype.setWorldBounds = function (x, y) {
         this.worldBoundsX = x;
         this.worldBoundsY = y;
+        this.aspectRatio = this.worldBoundsX / this.worldBoundsY;
       };
 
-      Shape.prototype.getWorldX = function () {
-        return (this.body.position.x / (1000 / this.worldBoundsX));
-        // return Math.round(this.body.bounds.min.x / (1000 / this.worldBoundsX));
+      Shape.prototype.getRealX = function () {
+        return (this.body.position.x / (100 / this.worldBoundsX));
+        // return Math.round(this.body.bounds.min.x / (100 / this.worldBoundsX));
       }
 
-      Shape.prototype.getWorldY = function () {
-        return (this.body.position.y / (1000 / this.worldBoundsY));
-        // return Math.round(this.body.bounds.min.y / (1000 / this.worldBoundsY));
+      Shape.prototype.getRealY = function () {
+        return (this.body.position.y / (100 / this.worldBoundsY));
+        // return Math.round(this.body.bounds.min.y / (100 / this.worldBoundsY));
       }
 
-      Shape.prototype.getWorldWidth = function () {
-        return (this.width / (1000 / this.worldBoundsX));
+      Shape.prototype.getRealWidth = function () {
+        return (this.width / (100 / this.worldBoundsX) / this.aspectRatio);
       }
 
-      Shape.prototype.getWorldHeight = function () {
-        return (this.height / (1000 / this.worldBoundsY));
+      Shape.prototype.getRealHeight = function () {
+        return (this.height / (100 / this.worldBoundsY));
       }
 
 
       Shape.prototype.animate = function () {
-        // this.element.style.left =  "" + this.getWorldX() + "px";
-        // this.element.style.top =  "" + this.getWorldY() + "px";
+        // this.element.style.left =  "" + this.getRealX() + "px";
+        // this.element.style.top =  "" + this.getRealY() + "px";
 
         this.element.style.transform = "translate( " +
-          this.getWorldX() +
+          this.getRealX() +
           "px, " +
-          this.getWorldY() +
+          this.getRealY() +
           "px )";
         this.element.style.transform += "rotate( " + this.body.angle + "rad )";
       }
@@ -185,7 +184,7 @@
       }
 
 
-      var ground = Bodies.rectangle(0, 950, 6000, 100, {
+      var ground = Bodies.rectangle(0, 130, 6000, 100, {
         isStatic: true,
         friction: 1
       });
@@ -201,6 +200,7 @@
       // run the engine
       Runner.run(runner, engine);
 
+      engine.world.gravity.scale = 0.00005 
 
       let shapes = [];
       let x = 400;
@@ -215,7 +215,7 @@
           shapes.push(shape);
 
           Composite.add(engine.world, shape.getPhysicsBody());
-        }, 130 * i);
+        }, 160 * i);
 
       }
       document.body.addEventListener('click', event => {
